--- a/elements/trello-board.html
+++ b/elements/trello-board.html
@@ -13,8 +13,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
  <link rel="import" href="../bower_components/paper-dialog/paper-dialog.html">
  <link rel="import" href="../bower_components/paper-button/paper-button.html">
  <link rel="import" href="../bower_components/paper-item/paper-item.html">
- <link rel="import" href="../bower_components/neon-animation/animations/scale-up-animation.html">
-<link rel="import" href="../bower_components/neon-animation/animations/fade-out-animation.html">
+ <!-- <link rel="import" href="../bower_components/neon-animation/animations/scale-up-animation.html">
+<link rel="import" href="../bower_components/neon-animation/animations/fade-out-animation.html"> -->
 
 <!-- <script src="../js/jquery-1.7.1.min.js"></script>
 <script src="https://api.trello.com/1/client.js?key=[AppKey]"></script> -->
